🐞: fix falling stars overflow on chrome based browsers

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,7 +91,7 @@ html[data-theme="dark"] {
 
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .social {
